src/components/FabricJS.css
.canvas-container {
  max-height: 510px;
  max-width: 800px;
}

#rowFabric {
  display: grid;
  grid-template-columns: 300px auto;
  padding: 0;
  /* Stretch div element to window size */
  height: 100vh;
  width: 100vw;
}

#sidebarFabric {
  background-color: lightgray;
  padding: 10px;
  position: fixed;
  width: 300px;
}

#sidebarFabric div {
  margin: 20px 0 20px;
  text-align: left;
}

